# rust-dnsio

./: Cargo.toml  README.md
benches/: decode.rs  decode_iai.rs
src/: builder.rs  error.rs  header.rs  lib.rs  message.rs  question.rs  refs.rs  resource_record.rs
src/decode/: header.rs  message.rs  mod.rs  name.rs  question.rs  resource_record.rs
src/decode/ref/: mod.rs
src/encode/: header.rs  message.rs  mod.rs  name.rs  question.rs  resource_record.rs
