[package]
name = "dnsio"
version = "0.1.1"
edition = "2024"
description = "DNS message serialization/deserialization library"
license = "MIT"
authors = ["WatchDG <baranov@w3m.co>"]
repository = "https://github.com/WatchDG/rust-dnsio"
keywords = ["dns", "serialization", "deserialization", "protocol", "parser"]
categories = ["network-programming", "parsing"]
readme = "README.md"

[dependencies]
dns-message="0.2"
mt = "0.3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "decode"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"